@startuml uml_model
title Model Components (Actions / Effects / Items)

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam class {
    BackgroundColor White
    BorderColor Black
}
skinparam package {
    BackgroundColor #E8F5E9
    BorderColor #388E3C
}
skinparam note {
    BackgroundColor #FFFDE7
    BorderColor #F9A825
}

hide empty members

' ── Actions ─────────────────────────────────────
package "arena.model.action" {

    abstract class Action {
        - name : String
        ..
        + getName() : String
        + {abstract} execute(actor, target, all) : void
    }

    class BasicAttack {
        + execute(actor, target, all) : void
    }

    class Defend {
        + execute(actor, target, all) : void
    }

    class UseItem {
        - item : Item
        ..
        + execute(actor, target, all) : void
    }

    class UseSpecialSkill {
        + execute(actor, target, all) : void
    }
}

note as N_ACTION #FFFDE7
  <b>Action — Template Method Pattern</b>
  Action defines the execute() contract.
  Each subclass implements the specific behaviour:
  • BasicAttack: damage = ATK − DEF, calls takeDamage()
  • Defend: wraps actor in a DefendBuff StatusEffect
  • UseItem: delegates to item.use(), then removes item
  • UseSpecialSkill: casts actor to Player, calls
    player.useSpecialSkill() — sets cooldown after use
end note
Action .. N_ACTION

' ── Effects ─────────────────────────────────────
package "arena.model.effect" {

    abstract class StatusEffect {
        # remainingTurns : int
        ..
        + onTurnStart(combatant) : boolean
        + modifyDefense(base) : int
        + modifyIncomingDamage(dmg, src, tgt) : int
        + isExpired() : boolean
        + onApply(combatant) : void
        + onExpire(combatant) : void
    }

    class DefendBuff {
        turns=2  defenseBoost=+10
        ..
        + modifyDefense(base) : int
    }

    class StunEffect {
        DEFAULT_DURATION = 2
        ..
        + onTurnStart(combatant) : boolean
    }

    class SmokeBombEffect {
        + modifyIncomingDamage(dmg, src, tgt) : int
    }
}

note as N_EFFECT #FFFDE7
  <b>StatusEffect — Hook Pattern</b>
  Combatant.beginTurn() and getDefense() iterate
  activeEffects and call the relevant hooks:
  • DefendBuff.modifyDefense(): raises effective DEF by +10
    for 2 of the bearer's own turns, then expires.
  • StunEffect.onTurnStart(): returns true for 2 turns,
    causing BattleEngine to skip the enemy's AI action.
  • SmokeBombEffect.modifyIncomingDamage(): returns 0
    whenever the attacker is an Enemy instance,
    making the player invulnerable for 2 turns.
end note
StatusEffect .. N_EFFECT

' ── Items ────────────────────────────────────────
package "arena.model.item" {

    abstract class Item {
        - name : String
        - description : String
        ..
        + getName() : String
        + {abstract} use(player, enemies, target) : void
    }

    class Potion {
        HEAL_AMOUNT = 100
        ..
        + use(player, enemies, target) : void
    }

    class PowerStone {
        + use(player, enemies, target) : void
    }

    class SmokeBomb {
        + use(player, enemies, target) : void
    }
}

note as N_ITEM #FFFDE7
  <b>Item behaviours</b>
  • Potion: calls player.heal(100) — restores up to 100 HP.
  • PowerStone: calls triggerSpecialSkillWithoutCooldown()
    — fires the player's special skill immediately with
    no cooldown penalty, effectively bypassing the 3-turn wait.
  • SmokeBomb: applies SmokeBombEffect to the player,
    granting 2 turns of full damage immunity vs enemies.
end note
Item .. N_ITEM

' ── Inheritance ──────────────────────────────────
Action      <|-- BasicAttack
Action      <|-- Defend
Action      <|-- UseItem
Action      <|-- UseSpecialSkill

StatusEffect <|-- DefendBuff
StatusEffect <|-- StunEffect
StatusEffect <|-- SmokeBombEffect

Item <|-- Potion
Item <|-- PowerStone
Item <|-- SmokeBomb

' ── Cross-group associations ─────────────────────
UseItem          -->  Item            : holds
Defend           ..>  DefendBuff      : creates
SmokeBomb        ..>  SmokeBombEffect : creates
PowerStone       ..>  Player          : calls triggerSpecialSkill
UseSpecialSkill  ..>  Player          : casts actor → calls useSpecialSkill()

note bottom of Player : Defined in\nCombatant module

@enduml
